とりあえずのデザイン

--- a/three-step-wallet/src/app/tab2/tab2.page.html
+++ b/three-step-wallet/src/app/tab2/tab2.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Two
+      QR Scan
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-fab-button class="camera">
+    <ion-icon name="camera" class="icon"></ion-icon>
+  </ion-fab-button>
+</ion-content>
