--- a/three-step-wallet/src/app/tab3/tab3.page.html
+++ b/three-step-wallet/src/app/tab3/tab3.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab Three
+      Calling
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-fab-button class="call">
+    <ion-icon name="call" class="icon"></ion-icon>
+  </ion-fab-button>
+</ion-content>
