--- a/three-step-wallet/src/app/tab1/tab1.page.scss
+++ b/three-step-wallet/src/app/tab1/tab1.page.scss
@@ -2,3 +2,20 @@
   max-height: 35vh;
   overflow: hidden;
 }
+
+.send {
+  position: absolute;
+  padding: 20px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+}
+
+.icon {
+  width: 100px;
+  height: 100px;
+}
