ページの準備はできました

--- a/three-step-wallet/src/app/tab1/tab1.page.html
+++ b/three-step-wallet/src/app/tab1/tab1.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+  <a href="/setting">setting</a>
     <ion-fab-button class="send">
       <ion-icon name="send" class="icon"></ion-icon>
     </ion-fab-button>
