--- a/three-step-wallet/src/app/tab2/tab2.page.html
+++ b/three-step-wallet/src/app/tab2/tab2.page.html
@@ -3,11 +3,20 @@
     <ion-title>
       QR Scan
     </ion-title>
+    <ion-buttons slot="primary">
+        <a href="/setting">
+          <ion-button>
+            <ion-icon class="primary" slot="icon-only" name="settings"></ion-icon>
+          </ion-button>
+        </a>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-fab-button class="camera">
-    <ion-icon name="camera" class="icon"></ion-icon>
-  </ion-fab-button>
+  <a href="/tabs/tab3">
+    <ion-fab-button class="camera">
+      <ion-icon name="camera" class="icon"></ion-icon>
+    </ion-fab-button>
+  </a>
 </ion-content>
