--- a/three-step-wallet/src/app/tab3/tab3.page.html
+++ b/three-step-wallet/src/app/tab3/tab3.page.html
@@ -3,11 +3,20 @@
     <ion-title>
       Calling
     </ion-title>
+    <ion-buttons slot="primary">
+        <a href="/setting">
+          <ion-button>
+            <ion-icon class="primary" slot="icon-only" name="settings"></ion-icon>
+          </ion-button>
+        </a>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-fab-button class="call">
-    <ion-icon name="call" class="icon"></ion-icon>
-  </ion-fab-button>
+  <a href="/">
+    <ion-fab-button class="call">
+      <ion-icon name="call" class="icon"></ion-icon>
+    </ion-fab-button>
+  </a>
 </ion-content>
