settingの位置修正

--- a/three-step-wallet/src/app/setting/setting.page.html
+++ b/three-step-wallet/src/app/setting/setting.page.html
@@ -11,8 +11,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-    <ion-card class="card">
+<ion-content class="card">
+    <ion-card>
         <ion-card-header>
           <ion-card-title>Settings</ion-card-title>
         </ion-card-header>
