--- a/three-step-wallet/src/app/setting/setting.page.scss
+++ b/three-step-wallet/src/app/setting/setting.page.scss
@@ -1,9 +1,12 @@
 .card {
     position: absolute;
-    padding: 20px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    left: 10%;
+    right: 10%;
+    top: 25%;
+    margin: auto;
+    width: 80%;/*幅*/
+    height: 450px;/*高さ*/
+    background: #03a9f4;/*背景色*/
+    text-align: center;/*中央寄せ*/
   }
   
