ちょっと一度コミットします

--- a/three-step-wallet/src/app/tab2/tab2.page.html
+++ b/three-step-wallet/src/app/tab2/tab2.page.html
@@ -14,9 +14,7 @@
 </ion-header>
 
 <ion-content>
-  <a href="/tabs/tab3">
-    <ion-fab-button class="camera">
+    <ion-fab-button class="camera" (click)="qrscan()">
       <ion-icon name="camera" class="icon"></ion-icon>
     </ion-fab-button>
-  </a>
 </ion-content>
