カメラ動作確認

--- a/three-step-wallet/src/app/tab3/tab3.page.html
+++ b/three-step-wallet/src/app/tab3/tab3.page.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <a href="/">
-    <ion-fab-button class="call">
+    <ion-fab-button class="call" (click)="takePicture()">
       <ion-icon name="call" class="icon"></ion-icon>
     </ion-fab-button>
   </a>
