一旦コミット

--- a/three-step-wallet/src/app/setting/setting.page.scss
+++ b/three-step-wallet/src/app/setting/setting.page.scss
@@ -6,7 +6,6 @@
     margin: auto;
     width: 80%;/*幅*/
     height: 450px;/*高さ*/
-    background: #03a9f4;/*背景色*/
+    background: #ffffff;/*背景色*/
     text-align: center;/*中央寄せ*/
   }
-  
