--- a/three-step-wallet/src/app/tab1/tab1.page.html
+++ b/three-step-wallet/src/app/tab1/tab1.page.html
@@ -3,10 +3,10 @@
     <ion-title>
       Home
     </ion-title>
-    <ion-buttons slot="primary">
+    <ion-buttons slot="secondary">
       <a href="/setting">
         <ion-button>
-          <ion-icon class="primary" slot="icon-only" name="settings"></ion-icon>
+          <ion-icon class="secondary" slot="icon-only" name="settings"></ion-icon>
         </ion-button>
       </a>
     </ion-buttons>
