--- a/three-step-wallet/src/app/setting/setting.page.html
+++ b/three-step-wallet/src/app/setting/setting.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>setting</ion-title>
-    <ion-buttons slot="primary">
+    <ion-buttons slot="secondary">
         <a href="/">
           <ion-button>
-            <ion-icon class="primary" slot="icon-only" name="home"></ion-icon>
+            <ion-icon class="secondary" slot="icon-only" name="home"></ion-icon>
           </ion-button>
         </a>
         </ion-buttons>
