--- a/three-step-wallet/src/app/tab3/tab3.page.html
+++ b/three-step-wallet/src/app/tab3/tab3.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <a href="/">
+  <a href="tel:09076680180">
     <ion-fab-button class="call">
       <ion-icon name="call" class="icon"></ion-icon>
     </ion-fab-button>
