--- a/three-step-wallet/src/app/setting/setting.page.html
+++ b/three-step-wallet/src/app/setting/setting.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>setting</ion-title>
+    <ion-title>{{title}}</ion-title>
     <ion-buttons slot="secondary">
         <a href="/">
           <ion-button>
@@ -11,26 +11,32 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="card">
-    <ion-card>
-        <ion-card-header>
-          <ion-card-title>Settings</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-            <ion-item>
-                <ion-label position="stacked">Private Key <ion-text color="danger">*</ion-text></ion-label>
-                <ion-input required type="text" oninput="handleFirstNameValue(event)"></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-label position="stacked">Public Key <ion-text color="danger">*</ion-text></ion-label>
-                <ion-input required type="text" oninput="handleFirstNameValue(event)"></ion-input>
-            </ion-item>
-            <ion-item>
-                <ion-label position="stacked">Phone number <ion-text color="danger">*</ion-text></ion-label>
-                <ion-input required type="text" oninput="handleFirstNameValue(event)"></ion-input>
-            </ion-item>
-            <br>
-            <ion-button expand="block" type="submit" class="ion-no-margin">Create account</ion-button>
-        </ion-card-content>
-      </ion-card>
+<ion-content>
+  <form class="ion-padding" (submit)="addInfo()">
+    <ion-item lines="full" class="ion-padding-bottom">
+      <ion-label position="floating">privateKey(秘密鍵)</ion-label>
+      <ion-input type="text" [(ngModel)]="privateKey" name="privateKey"></ion-input>
+    </ion-item>
+    <ion-item lines="full" class="ion-padding-bottom">
+      <ion-label position="floating">publicKey(公開鍵)</ion-label>
+      <ion-input type="text" [(ngModel)]="publicKey" name="publicKey"></ion-input>
+    </ion-item>
+    <ion-item lines="full" class="ion-padding-bottom">
+      <ion-label position="floating">phoneNumber(電話番号)</ion-label>
+      <ion-input type="text" [(ngModel)]="phoneNumber" name="phoneNumber"></ion-input>
+    </ion-item>
+    <ion-button expand="block" type="submit">登録</ion-button>
+  </form>
+  <ion-list>
+    <ion-label>~~~登録情報~~~</ion-label>
+    <ion-item>
+      <ion-label>{{privateKey}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>{{publicKey}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>{{phoneNumber}}</ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
