ページ遷移nem2-sdk

--- a/3-step-wallet-mail/src/app/tab2/tab2.page.html
+++ b/3-step-wallet-mail/src/app/tab2/tab2.page.html
@@ -1,9 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Two
-    </ion-title>
+    <ion-title>QR Scanner</ion-title>
+    <ion-buttons slot="primary" *ngIf="isOpen">
+      <ion-button slot="icon-only" (click)="closeScanner()">
+        <ion-icon name="close"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content [class.show-qr-scanner]="isOpen">
+    <ion-fab-button class="call" (click)="startScanner()">
+        <ion-icon name="camera" class="icon"></ion-icon>
+    </ion-fab-button>
+</ion-content>
