--- a/3-step-wallet-mail/src/app/tab3/tab3.page.html
+++ b/3-step-wallet-mail/src/app/tab3/tab3.page.html
@@ -1,9 +1,42 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Tab Three
-    </ion-title>
+    <ion-title>{{title}}</ion-title>
+    <ion-buttons slot="secondary">
+        <a href="/">
+          <ion-button>
+            <ion-icon class="secondary" slot="icon-only" name="home"></ion-icon>
+          </ion-button>
+        </a>
+        </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <form class="ion-padding" (submit)="addInfo()">
+    <ion-item lines="full" class="ion-padding-bottom">
+      <ion-label position="floating">privateKey(秘密鍵)</ion-label>
+      <ion-input type="text" [(ngModel)]="privateKey" name="privateKey"></ion-input>
+    </ion-item>
+    <ion-item lines="full" class="ion-padding-bottom">
+      <ion-label position="floating">publicKey(公開鍵)</ion-label>
+      <ion-input type="text" [(ngModel)]="publicKey" name="publicKey"></ion-input>
+    </ion-item>
+    <ion-item lines="full" class="ion-padding-bottom">
+      <ion-label position="floating">phoneNumber(電話番号)</ion-label>
+      <ion-input type="text" [(ngModel)]="phoneNumber" name="phoneNumber"></ion-input>
+    </ion-item>
+    <ion-button expand="block" type="submit">登録</ion-button>
+  </form>
+  <ion-list>
+    <ion-label>~~~登録情報~~~</ion-label>
+    <ion-item>
+      <ion-label>{{privateKey}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>{{publicKey}}</ion-label>
+    </ion-item>
+    <ion-item>
+      <ion-label>{{hrefNumber}}</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
