--- a/3-step-wallet-mail/src/app/send-mail/send-mail.page.html
+++ b/3-step-wallet-mail/src/app/send-mail/send-mail.page.html
@@ -14,7 +14,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-fab-button class="call">
+    <ion-fab-button class="call" (click)="sendMessage()">
       <ion-icon name="call" class="icon"></ion-icon>
     </ion-fab-button>
 </ion-content>
