電話番号情報の登録 表示不具合修正

--- a/three-step-wallet/src/app/setting/setting.page.html
+++ b/three-step-wallet/src/app/setting/setting.page.html
@@ -36,7 +36,7 @@
       <ion-label>{{publicKey}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>{{hrefNumber}}</ion-label>
+      <ion-label>{{phoneNumber}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
