mail版のアイコン修正 電話番号の不具合修正

--- a/3-step-wallet-mail/src/app/tab1/tab1.page.html
+++ b/3-step-wallet-mail/src/app/tab1/tab1.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Home
+      Send Symbol
     </ion-title>
     <ion-buttons slot="secondary">
       <a href="/send-mail">
         <ion-button>
-          <ion-icon class="secondary" slot="icon-only" name="settings"></ion-icon>
+          <ion-icon class="secondary" slot="icon-only" name="mail"></ion-icon>
         </ion-button>
       </a>
     </ion-buttons>
