--- a/3-step-wallet-mail/src/app/tab3/tab3.page.html
+++ b/3-step-wallet-mail/src/app/tab3/tab3.page.html
@@ -36,7 +36,7 @@
       <ion-label>{{publicKey}}</ion-label>
     </ion-item>
     <ion-item>
-      <ion-label>{{hrefNumber}}</ion-label>
+      <ion-label>{{phoneNumber}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
