なぜか通らない

--- a/three-step-wallet/src/app/tab2/tab2.page.html
+++ b/three-step-wallet/src/app/tab2/tab2.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content [class.show-qr-scanner]="isOpen">
-    <ion-fab-button class="call" (click)="openScanner()">
+    <ion-fab-button class="call" (click)="startScanner()">
         <ion-icon name="camera" class="icon"></ion-icon>
     </ion-fab-button>
 </ion-content>
